--- a/config/snakebids.yml
+++ b/config/snakebids.yml
@@ -78,4 +78,5 @@ parse_args:
 containers:
     fastsurfer: 'docker://deepmi/fastsurfer:gpu-v2.0.4' 
     ciftify: 'docker://tigrlab/fmriprep_ciftify:v1.3.2-2.3.3'
+    ciftify_abspath: '/project/6050199/akhanf/singularity/bids-apps/tigrlab_fmriprep_ciftify_v1.3.2-2.3.3.sif'
     autotop: 'docker://khanlab/autotop_deps:v0.4.1'
